# TradingBot-Sim

./: .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  env.example  gui_launcher.py  pyproject.toml  settings.json  test_agent.py  test_config.py  test_env.py
.github/workflows/: ci.yaml
configs/: a2c.yaml  custom_ppo_1756844885.yaml  default.yaml  dqn.yaml  ppo.yaml  quick_ppo_1756841974.yaml  quick_ppo_1756845532.yaml  quick_ppo_1756847254.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  gui.md  index.md  setup.md
scripts/: example.py
src/tbs/: __init__.py  cli.py
src/tbs/agents/: __init__.py  evaluate.py  registry.py  train.py
src/tbs/data/: __init__.py  loader.py
src/tbs/envs/: __init__.py  features.py  reward_schemes.py  trading_env.py  utils.py
src/tbs/gui/: __init__.py  dash_app.py  streamlit_app.py
src/tbs/portfolio/: __init__.py  wallet.py
src/tbs/viz/: __init__.py  plots.py
tests/: test_data_loader.py  test_env.py  test_wallet.py
